--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
+* {
+	text-align: center;
+	padding-top: 100px;
+	
+}
 
+h1 {
+	
+		 background: LightGray;
+  width: 300px;
+  height: 300px;
+ margin: auto;
+  outline: 5px solid Gray;
+	
+}
