--- a/style.css
+++ b/style.css
@@ -1,26 +1,37 @@
 body {
-  background-color: lightblue;
+	background-color: lightblue;
 }
 
 * {
 	text-align: center;
-	
+	align-items: center;
 }
 
 #test {
-	
+	box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
 	padding-top: 100px;
-		 background: LightGray;
-  width: 300px;
-  height: 300px;
- margin: auto;
-  outline: 5px solid Gray;
+	background: AliceBlue;
+	width: 300px;
+	height: 300px;
+	margin: auto;
+	outline: 5px solid Gray;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
 	
 }
 
 #title {
-	
 	font-size: 100px;
 	
 }
 
+input {
+	background-color: CornflowerBlue;
+	position: relative;
+	margin: 500px;
+	font-size: 100px;
+	font-family: "Times New Roman", Times, serif;
+	box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+	outline: 4px solid black;
+}
